# nonphysical

./: .gitignore  Cargo.toml  LICENSE  nonphysical_ptx.7z  nonphysical_ptx.ptx
baseless/: Cargo.toml
baseless/src/: cluster.rs  lib.rs  linear.rs  shared.rs
baseless/src/cluster/: dbscan.rs  hdbscan.rs  kmeans.rs
baseless/src/graph/: iso_tree.rs  kd_tree.rs  ms_tree.rs  sl_tree.rs
baseless/src/linear/: householder.rs  pca.rs  svd.rs  von_mises.rs
baseless/src/shared/: complex.rs  float.rs  matrix.rs  point.rs  primitive.rs  real.rs  vector.rs
baseless/src/signal/: fourier.rs  gabor.rs  wavelet.rs
nonphysical_core/: Cargo.toml
nonphysical_core/src/: cluster.rs  graph.rs  lib.rs  linear.rs  neural.rs  shared.rs  signal.rs
nonphysical_core/src/cluster/: hdbscan.rs  iso_forest.rs  kmeans.rs  sscl.rs
nonphysical_core/src/crypt/: hash.rs
nonphysical_core/src/graph/: graph.rs  iso_tree.rs  kd_tree.rs  ms_tree.rs
nonphysical_core/src/linear/: bidiagonal.rs  eigen.rs  gemm.rs  hessenberg.rs  householder.rs  jacobi.rs  pca.rs  qr_decomposition.rs  schur.rs  svd.rs  von_mises.rs
nonphysical_core/src/neural/: activation copy.rs  layer-old.rs  layer.rs  network-old.rs
nonphysical_core/src/random/: pcg.rs
nonphysical_core/src/shared/: complex.rs  float.rs  hash.rs  point.rs  (+6 more)
nonphysical_ptx/: Cargo.toml  a.exp  fft.cu  fft.ptx  intrinsic.cu  intrinsic.ptx  link.ptx  nonphysical.ptx  out.cubin  para.cu  para.ptx  sort.cu  sort2.cu  test.cubin
nonphysical_ptx/.cargo/: config.toml
nonphysical_ptx/src/: cluster.rs  cuda.rs  graph.rs  lib.rs  shared.rs  signal.rs
(+309 files in other folders)
