[package]
name = "nonphysical_core"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
panic = "abort"
strip = true

[profile.lto]
inherits = "release"
lto="fat"


[dependencies]

[features]
default = []
std = []